💄 Fix alignment of OTP Inputs

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -23,4 +23,5 @@
   padding: 10px;
   width: 2.8rem;
   border-radius: 10px;
+  text-align: center;
 }
